--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -44,3 +44,45 @@ code {
     font-size: 18pt;
     padding-left: 15px;
 }
+
+.menu-bar {
+    position: absolute;
+    /* margin-top: -20px; */
+    height: 7vh;
+    width: 100%;
+    z-index: 5000;
+    background-color: rgb(0, 0, 0);
+    opacity: 0.6;
+}
+
+.menu-options {
+    margin-top: 1%;
+}
+
+.articles-menu {
+    margin-left: 5%;
+    color: rgb(204, 204, 204);
+    display: inline;
+}
+
+.articles-menu:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.nsw-map-menu {
+    color: rgb(204, 204, 204);;
+    display: inline;
+    margin-left: 5%;
+}
+
+.nsw-map-menu:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.articles {
+    margin-top: 20px;
+    height: 100vh;
+    width: 100%;
+}
