--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -22,9 +22,10 @@ code {
     height: 30em;
     position: absolute;
     border: 1px solid gray;
-    border-radius: 2px;
-    background-color: white;
-    z-index: 9999
+    border-radius: 15px;
+    background-color: #000000;
+    z-index: 9999;
+    opacity: 0.7;
 }
 
 .close-info-box {
@@ -41,6 +42,19 @@ code {
 }
 
 .hospital-name {
+    color: #ECEFF1;
     font-size: 18pt;
-    padding-left: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    text-align: center;
 }
+
+.hospital-detail{
+    color: #ECEFF1;
+    font-size: 14pt;
+    padding-left: 40px;
+    padding-right: 40px;
+    text-align: left;
+}
+
+
