--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -22,10 +22,10 @@ code {
     height: 35em;
     position: absolute;
     border: 1px solid gray;
-    border-radius: 15px;
+    border-radius: 9px;
     background-color: #000000;
     z-index: 9999;
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .close-info-box {
@@ -33,12 +33,12 @@ code {
     padding-right: 10px;
     font-size: 14pt;
     float: right;
-    color: rgb(121, 121, 121);
+    color: rgb(184, 184, 184);
 }
 
 .close-info-box:hover {
     cursor: pointer;
-    color: rgb(32, 32, 32);
+    color: rgb(90, 90, 90);
 }
 
 .hospital-name {
@@ -62,6 +62,7 @@ code {
     position: absolute;
     /* margin-top: -20px; */
     height: 7vh;
+    min-height: 47px;
     width: 100%;
     z-index: 5000;
     background-color: rgb(0, 0, 0);
