--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -1,102 +1,109 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .hospital-marker {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .info-box {
-    cursor: default;
-    width: 60em;
-    height: 35em;
-    position: absolute;
-    border: 1px solid gray;
-    border-radius: 15px;
-    background-color: #000000;
-    z-index: 9999;
-    opacity: 0.7;
+  cursor: default;
+  width: 60em;
+  height: 35em;
+  position: absolute;
+  border: 1px solid gray;
+  border-radius: 15px;
+  background-color: #000000;
+  z-index: 9999;
+  opacity: 0.7;
 }
 
 .close-info-box {
-    padding-top: 5px;
-    padding-right: 10px;
-    font-size: 14pt;
-    float: right;
-    color: rgb(121, 121, 121);
+  padding-top: 5px;
+  padding-right: 10px;
+  font-size: 14pt;
+  float: right;
+  color: rgb(121, 121, 121);
 }
 
 .close-info-box:hover {
-    cursor: pointer;
-    color: rgb(32, 32, 32);
+  cursor: pointer;
+  color: rgb(32, 32, 32);
 }
 
 .hospital-name {
-    color: #ECEFF1;
-    font-size: 18pt;
-    padding-left: 40px;
-    padding-right: 40px;
-    text-align: center;
+  color: #eceff1;
+  font-size: 18pt;
+  padding-left: 40px;
+  padding-right: 40px;
+  text-align: center;
 }
 
-.hospital-detail{
-    color: #ECEFF1;
-    font-size: 14pt;
-    padding-left: 40px;
-    padding-right: 40px;
-    text-align: left;
+.hospital-detail {
+  color: #eceff1;
+  font-size: 14pt;
+  padding-left: 40px;
+  padding-right: 40px;
+  text-align: left;
 }
-
 
 .menu-bar {
-    position: absolute;
-    /* margin-top: -20px; */
-    height: 7vh;
-    width: 100%;
-    z-index: 5000;
-    background-color: rgb(0, 0, 0);
-    opacity: 0.6;
+  position: absolute;
+  /* margin-top: -20px; */
+  height: 7vh;
+  width: 100%;
+  z-index: 5000;
+  background-color: rgb(0, 0, 0);
+  opacity: 0.6;
 }
 
 .menu-options {
-    margin-top: 1%;
+  margin-top: 1%;
 }
 
 .articles-menu {
-    margin-left: 5%;
-    color: rgb(204, 204, 204);
-    display: inline;
+  margin-left: 5%;
+  color: rgb(204, 204, 204);
+  display: inline;
 }
 
 .articles-menu:hover {
-    cursor: pointer;
-    color: white;
+  cursor: pointer;
+  color: white;
 }
 
 .nsw-map-menu {
-    color: rgb(204, 204, 204);;
-    display: inline;
-    margin-left: 5%;
+  color: rgb(204, 204, 204);
+  display: inline;
+  margin-left: 5%;
 }
 
 .nsw-map-menu:hover {
-    cursor: pointer;
-    color: white;
+  cursor: pointer;
+  color: white;
 }
 
 .articles {
-    margin-top: 20px;
-    height: 100vh;
-    width: 100%;
+  margin-top: 20px;
+  height: 100vh;
+  width: 100%;
 }
 
+body {
+  padding: 40px 10% 20px 10%;
+}
+h1 {
+  padding: 20px 0;
+  font-size: 2.5em;
+  text-align: center;
+}
