--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -114,3 +114,22 @@ h1 {
 .navbar {
     opacity: 0.85;
 }
+
+.search-hospital {
+    z-index: 999999;
+    position: absolute;
+    top: 10%;
+    left: 1%;
+    height: 30px;
+    width: 18%;
+}
+
+.search-hospital > input {
+    padding: 2px;
+    padding-left: 5px;
+    height: 30px;
+    width: 100%;
+    font-size: 10pt;
+    border: 1px solid grey;
+    border-radius: 2px;
+}
