--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -131,5 +131,49 @@ h1 {
     width: 100%;
     font-size: 10pt;
     border: 1px solid grey;
-    border-radius: 2px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    opacity: 0.5;
+}
+
+.search-hospital > input:hover:not(:focus) {
+    animation: fullOpacity 0.2s;
+    opacity: 1;
+}
+
+.search-hospital > input:focus {
+    opacity: 1;
+}
+
+.search-hospital > input:not(:focus) {
+    animation: halfOpacity 0.2s;
+}
+
+.hospital-option {
+    padding: 10px;
+    background-color: white;
+    height: 50px;
+    font-size: 12pt;
+    border-left: 1px solid rgb(94, 94, 94);
+    border-bottom: 1px solid rgb(94, 94, 94);
+    margin-bottom: 0;
+    transition: background-color 0.15s, color 0.15s;
+}
+
+.hospital-option:hover {
+    cursor: pointer;
+    background-color: rgb(80, 80, 80);
+    color: white;
+    transition: background-color 0.15s, color 0.15s;
+}
+
+/* Animations/Transitions */
+@keyframes fullOpacity {
+    from { opacity: 0.5; }
+    to { opacity: 1; }
+}
+
+@keyframes halfOpacity {
+    from { opacity: 1; }
+    to { opacity: 0.5; }
 }
