--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -149,15 +149,6 @@ h1 {
     animation: halfOpacity 0.2s;
 }
 
-.search-suburb {
-    z-index: 999999;
-    position: absolute;
-    top: 15%;
-    left: 1%;
-    height: 30px;
-    width: 18%;
-}
-
 
 .hospital-option {
     padding: 10px;
@@ -176,6 +167,50 @@ h1 {
     color: white;
     transition: background-color 0.15s, color 0.15s;
 }
+
+
+/*Suburb Search Bar*/
+.search-suburb {
+    z-index: 999999;
+    position: absolute;
+    top: 15%;
+    left: 1%;
+    height: 30px;
+    width: 18%;
+}
+
+.search-suburb > input {
+    padding: 2px;
+    padding-left: 5px;
+    height: 30px;
+    width: 100%;
+    font-size: 10pt;
+    border: 1px solid grey;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    opacity: 0.5;
+}
+
+
+.suburb-option {
+    padding: 10px;
+    background-color: white;
+    height: 50px;
+    font-size: 12pt;
+    border-left: 1px solid rgb(94, 94, 94);
+    border-bottom: 1px solid rgb(94, 94, 94);
+    margin-bottom: 0;
+    transition: background-color 0.15s, color 0.15s;
+}
+
+.suburb-option:hover {
+    cursor: pointer;
+    background-color: rgb(80, 80, 80);
+    color: white;
+    transition: background-color 0.15s, color 0.15s;
+}
+
+
 
 /* Animations/Transitions */
 @keyframes fullOpacity {
