--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -121,7 +121,8 @@ h1 {
     position: absolute;
     top: 10%;
     left: 1%;
-    height: 30px;
+    height: 70%;
+    max-height: 85%;
     width: 18%;
 }
 
@@ -170,6 +171,8 @@ h1 {
 
 .hospital-list {
     z-index: 99999;
+    height: 80%;
+    overflow-y: auto;
 }
 
 
