--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -121,8 +121,9 @@ h1 {
     position: absolute;
     top: 10%;
     left: 1%;
-    height: 70%;
-    max-height: 85%;
+    /* height: 70%; */
+    overflow-y: auto;
+    max-height: 60%;
     width: 18%;
 }
 
@@ -171,8 +172,7 @@ h1 {
 
 .hospital-list {
     z-index: 99999;
-    height: 80%;
-    overflow-y: auto;
+    /* height: 80%; */
 }
 
 
