--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -16,6 +16,17 @@ code {
   cursor: pointer;
 }
 
+.hospital-marker > img {
+    height: 18px;
+    width: 18px;
+    transition: 0.2s;
+}
+
+.hospital-marker > img:hover {
+    height: 22px;
+    width: 22px;
+}
+
 .info-box {
     cursor: default;
     width: 60em;
@@ -117,6 +128,7 @@ h1 {
 
 /* Hospital search bar*/
 .search-hospital {
+    box-shadow: 2px 2px 2px rgb(184, 184, 184);
     z-index: 999999;
     position: absolute;
     top: 10%;
@@ -133,7 +145,7 @@ h1 {
     height: 30px;
     width: 100%;
     font-size: 10pt;
-    border: 1px solid grey;
+    border: 1px solid white;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     opacity: 0.5;
@@ -178,9 +190,10 @@ h1 {
 
 /*Suburb Search Bar*/
 .search-suburb {
+    box-shadow: 2px 2px 2px rgb(184, 184, 184);
     z-index: 88888;
     position: absolute;
-    top: 20%;
+    top: 17%;
     left: 1%;
     max-height: 60%;
     width: 18%;
@@ -194,10 +207,10 @@ h1 {
     height: 30px;
     width: 100%;
     font-size: 10pt;
-    border: 1px solid grey;
+    border: 1px solid white;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 .search-suburb > input:hover:not(:focus) {
@@ -239,11 +252,11 @@ h1 {
 
 /* Animations/Transitions */
 @keyframes fullOpacity {
-    from { opacity: 0.5; }
+    from { opacity: 0.6; }
     to { opacity: 1; }
 }
 
 @keyframes halfOpacity {
     from { opacity: 1; }
-    to { opacity: 0.5; }
+    to { opacity: 0.6; }
 }
