--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -249,18 +249,6 @@ h1 {
     /* height: 80%; */
 }
 
-
-/* Animations/Transitions */
-@keyframes fullOpacity {
-    from { opacity: 0.6; }
-    to { opacity: 1; }
-}
-
-@keyframes halfOpacity {
-    from { opacity: 1; }
-    to { opacity: 0.6; }
-}
-
 /* Side Panel */
 .side-panel{
     display: flex;
@@ -277,4 +265,20 @@ h1 {
     color: #000;
     box-sizing: border-box;
     background-color: #ECEFF1;
+}
+
+
+/* End of class styles */
+/* Only add custom animations/transitions after this */
+
+
+/* Animations/Transitions */
+@keyframes fullOpacity {
+    from { opacity: 0.6; }
+    to { opacity: 1; }
+}
+
+@keyframes halfOpacity {
+    from { opacity: 1; }
+    to { opacity: 0.6; }
 }
