--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -128,30 +128,30 @@ h1 {
 
 /* Hospital search bar*/
 .search-hospital {
-    box-shadow: 2px 2px 2px rgb(184, 184, 184);
+    /* box-shadow: 2px 2px 2px rgb(184, 184, 184); */
     z-index: 999999;
-    position: absolute;
-    top: 10%;
-    left: 4%;
-    /* height: 70%; */
+    position: fixed;
+    top: 3%;
+    left: 1%;
     overflow-y: auto;
-    max-height: 60%;
-    width: 90%;
+    width: 28%;
+    border-radius: 3px;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
 
 .search-hospital > input {
     padding: 2px;
     padding-left: 5px;
-    height: 30px;
+    height: 40px;
     width: 100%;
     font-size: 10pt;
     border: 1px solid white;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    opacity: 0.6;
+    /* opacity: 0.6; */
 }
 
-.search-hospital > input:hover:not(:focus) {
+/* .search-hospital > input:hover:not(:focus) {
     animation: fullOpacity 0.2s;
     opacity: 1;
 }
@@ -162,60 +162,61 @@ h1 {
 
 .search-hospital > input:not(:focus) {
     animation: halfOpacity 0.2s;
-}
+} */
 
 
 .hospital-option {
     padding: 10px;
     background-color: white;
+    color: #1D809E;
     font-size: 12pt;
-    border-left: 1px solid rgb(94, 94, 94);
-    border-top: 1px solid rgb(94, 94, 94);
+    font-weight: bold;
+    border-left: 1px solid #F9C52F;
+    border-top: 1px solid #F9C52F;
     margin-bottom: 0;
     transition: background-color 0.15s, color 0.15s;
-    animation: fadeIn 0.2s
+    animation: optionFadeIn 0.2s;
 }
 
 .hospital-option:hover {
     cursor: pointer;
-    background-color: rgb(80, 80, 80);
-    color: white;
+    background-color: #F9C52F;
+    color: #1D809E;
     transition: background-color 0.15s, color 0.15s;
 }
 
 .hospital-list {
     z-index: 99999;
-    margin-top: 1px;
-    /* height: 80%; */
 }
 
 
 /*Suburb Search Bar*/
 .search-suburb {
-    box-shadow: 2px 2px 2px rgb(184, 184, 184);
-    z-index: 88888;
+    /* box-shadow: 2px 2px 2px rgb(184, 184, 184); */
+    z-index: 99998;
     position: absolute;
-    top: 17%;
-    left: 4%;
-    max-height: 60%;
-    width: 90%;
+    top: 12%;
+    left: 3.5%;
     overflow-y: auto;
+    width: 93%;
+    border-radius: 3px;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
 
 
 .search-suburb > input {
     padding: 2px;
     padding-left: 5px;
-    height: 30px;
+    height: 40px;
     width: 100%;
     font-size: 10pt;
     border: 1px solid white;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    opacity: 0.6;
+    /* opacity: 0.6; */
 }
 
-.search-suburb > input:hover:not(:focus) {
+/* .search-suburb > input:hover:not(:focus) {
     animation: fullOpacity 0.2s;
     opacity: 1;
 }
@@ -226,24 +227,25 @@ h1 {
 
 .search-suburb > input:not(:focus) {
     animation: halfOpacity 0.2s;
-}
+} */
 
 .suburb-option {
     padding: 10px;
     background-color: white;
-    height: 50px;
+    color: #1D809E;
     font-size: 12pt;
-    border-left: 1px solid rgb(94, 94, 94);
-    border-top: 1px solid rgb(94, 94, 94);
+    font-weight: bold;
+    border-left: 1px solid #F9C52F;
+    border-top: 1px solid #F9C52F;
     margin-bottom: 0;
     transition: background-color 0.15s, color 0.15s;
-    animation: fadeIn 0.25s
+    animation: optionFadeIn 0.2s;
 }
 
 .suburb-option:hover {
     cursor: pointer;
-    background-color: rgb(80, 80, 80);
-    color: white;
+    background-color: #F9C52F;
+    color: #1D809E;
     transition: background-color 0.15s, color 0.15s;
 }
 
@@ -273,17 +275,78 @@ h1 {
     top: 0;
     bottom: 0;
     left: 0;
-    right: 75%;
-    overflow: auto;
+    right: 70%;
+    /* overflow: auto; */
     z-index: 999;
     color: #000;
     box-sizing: border-box;
-    background-color: rgb(224, 224, 224);
-    box-shadow: 4px 0px 5px -2px grey;
-    /* animation: panelOpen 0.5s ease; */
+    background-color: #1D809E;
+    box-shadow: 4px 0px 4px -2px grey;
+    animation: fadeIn 0.3s ease;
 }
 
+.open-side-panel {
+    cursor: pointer;
+    z-index: 88888;
+    position: absolute;
+    top: 8%;
+    left: 1%;
+    width: 28%;
+    height: 45px;
+    /* background-color: #1D809E; */
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    text-align: center;
+    background-color: white;
+    color: grey;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    transition: background-color 0.1s;
+    /* animation: fadeIn 0.3s ease; */
+}
 
+.open-side-panel > p {
+    padding-top: 5px;
+    margin-left: 5px;
+    margin-top: 10px;
+    font-size: 10pt;
+    display: inline-block;
+}
+
+.open-side-panel-icon {
+    height: 20px;
+    width: 20px;
+}
+
+.close-side-panel {
+    cursor: pointer;
+    position: absolute;
+    bottom: 8%;
+    width: 40%;
+    height: 40px;
+    background-color: #1D809E;
+    color: white;
+    border: 1px solid #1D809E;
+    border-radius: 3px;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    text-align: center;
+    transition: background-color 0.1s, color 0.1s;
+}
+
+.close-side-panel:hover {
+    background-color: rgb(41, 152, 185);
+    border: 1px solid #1D809E;
+}
+
+.close-side-panel > p {
+    margin-top: 5px;
+    display: inline-block;
+}
+
+.down-arrow, .up-arrow {
+    height: 15px;
+    width: 15px;
+    margin-right: 5px;
+}
 /* End of class styles */
 /* Only add custom animations/transitions after this */
 
@@ -299,18 +362,23 @@ h1 {
     to { opacity: 0.6; }
 }
 
-@keyframes fadeIn {
+@keyframes optionFadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
 }
 
+@keyframes fadeIn {
+    from { background-color: rgba(0,0,0,0.0); }
+    to { background-color: rgba(29,128,158,1.0); }
+}
+
 @keyframes panelOpen {
     from { 
-        left: -20%;
+        left: -25%;
         right: 100%; 
     }
     to { 
         left: 0%; 
-        right: 80%;
+        right: 73%;
     }
 }
