--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -12,6 +12,49 @@ code {
     monospace;
 }
 
+/* Landing Page */
+.landing-page {
+    height: 100vh;
+    width: 100vw;
+}
+
+.landing-image{
+    flex: 1;
+    height: 100%;
+    width: 100%;
+    scroll: disabled;
+    overflow-y: hidden;
+    overflow: hidden;
+    overflow-x: hidden;
+
+}
+
+.get-started-button{
+    position:absolute;
+    top: 29.5%;
+    left:38.5%;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    height: 55px;
+    width: 380px;
+    border-radius: 20px;
+    background-color: #1D809E;
+    font-size: 27px;
+    font-family: "PT Sans Caption";
+    font-weight: bold;
+    color: white;
+    letter-spacing: 0.5px;
+    transition: background-color 0.2s;
+    cursor: pointer;
+    border-color: #ECEFF1;
+    border: 1px solid white;
+}
+
+.get-started-button:hover{
+    background-color: white;
+    color: #1D809E;
+    border: 1px solid #1D809E;
+}
+
 .hospital-marker {
   cursor: pointer;
 }
