--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -183,6 +183,7 @@ h1 {
     top: 3%;
     left: 1%;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 28%;
     border-radius: 3px;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
