--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -248,6 +248,7 @@ h1 {
     top: 12%;
     left: 3.5%;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 93%;
     border-radius: 3px;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
