--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -12,6 +12,45 @@ code {
     monospace;
 }
 
+/* Landing Page */
+.landing-page {
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.landing-image{
+    height: 100%;
+    width: 100%;
+}
+
+.get-started-button {
+    position:absolute;
+    top: 29.5%;
+    left:38.5%;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    height: 6%;
+    width: 22.5%;
+    border-radius: 20px;
+    background-color: #1D809E;
+    font-size: 27px;
+    /* font-family: "PT Sans Caption"; */
+    font-weight: bold;
+    font-size: 16pt;
+    color: white;
+    letter-spacing: 0.5px;
+    transition: background-color 0.2s;
+    cursor: pointer;
+    border: 1px solid #1D809E;
+}
+
+.get-started-button:hover{
+    background-color: white;
+    color: #1D809E;
+    border: 1px solid #1D809E;
+}
+
 .hospital-marker {
   cursor: pointer;
 }
@@ -140,7 +179,9 @@ h1 {
     top: 3%;
     left: 1%;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 28%;
+    max-height: 60%;
     border-radius: 3px;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
@@ -204,7 +245,9 @@ h1 {
     top: 12%;
     left: 3.5%;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 93%;
+    max-height: 60%;
     border-radius: 3px;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
