--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -355,7 +355,7 @@ h1 {
     /* animation: fadeIn 0.3s ease; */
 }
 
-.rectangle{
+.graph-rectangle{
     margin-top: 50px;
     width: 92%;
     height: 325px;
@@ -375,6 +375,7 @@ h1 {
     margin-top: 50px;
     background-color: white;
     border-radius: 3px;
+    width: 92%;
 }
 .open-side-panel > p {
     padding-top: 5px;
