--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -393,10 +393,10 @@ h1 {
 .close-side-panel {
     cursor: pointer;
     position: absolute;
-    bottom: 8%;
+    bottom: 2%;
     width: 40%;
     height: 40px;
-    background-color: #1D809E;
+    background-color: #00769e;
     color: white;
     border: 1px solid #1D809E;
     border-radius: 3px;
