--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -365,18 +365,25 @@ h1 {
 
 .closest-hospitals{
     width: 92%;
-    height: 100px;
+    height: 135px;
     background-color: white;
     border-radius: 3px;
     margin-top: 150px;
     border-radius: 3px;
 }
+.closest-hospital-list{
+    font-family: "Arial";
+    font-size: 12pt;
+    font-weight: normal;
+}
+
 .quiz-button{
     margin-top: 50px;
     background-color: white;
     border-radius: 3px;
     width: 92%;
 }
+
 .open-side-panel > p {
     padding-top: 5px;
     margin-left: 5px;
