--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -78,9 +78,8 @@ code {
     position: absolute;
     border: 1px solid gray;
     border-radius: 3px;
-    background-color: #000000;
+    background-color: rgba(249,197,47, 0.9);
     z-index: 9999;
-    opacity: 0.8;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
 
@@ -98,19 +97,22 @@ code {
 }
 
 .hospital-name {
-  color: #eceff1;
-  font-size: 18pt;
-  padding-left: 40px;
-  padding-right: 40px;
-  text-align: center;
+    margin-top: 3%;
+    color: black;
+    font-weight: 800;
+    font-size: 18pt;
+    padding-left: 40px;
+    padding-right: 40px;
+    text-align: center;
 }
 
 .hospital-detail {
-  color: #eceff1;
-  font-size: 14pt;
-  padding-left: 40px;
-  padding-right: 40px;
-  text-align: left;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 14pt;
+    font-weight: 500;
+    padding-left: 40px;
+    padding-right: 40px;
+    text-align: left;
 }
 
 .menu-bar {
