--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -245,12 +245,12 @@ h1 {
 .search-suburb {
     /* box-shadow: 2px 2px 2px rgb(184, 184, 184); */
     z-index: 99998;
-    position: absolute;
-    top: 9%;
-    left: 3.5%;
+    position: fixed;
+    top: 11%;
+    left: 1%;
     overflow-y: auto;
     overflow-x: hidden;
-    width: 93%;
+    width: 28%;
     max-height: 60%;
     border-radius: 3px;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
@@ -362,7 +362,7 @@ h1 {
 .graph-rectangle{
     margin-top: 35%;
     width: 92%;
-    height: 325px;
+    height: 45%;
     background-color: white;
     border-radius: 3px;
 }
