--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -86,16 +86,17 @@ code {
 }
 
 .close-info-box {
-    padding-top: 5px;
-    padding-right: 10px;
+    padding: 5px;
+    margin-top: 5px;
+    margin-right: 10px;
     font-size: 14pt;
     float: right;
-    color: rgb(184, 184, 184);
+    color: rgb(88, 88, 88);
 }
 
 .close-info-box:hover {
     cursor: pointer;
-    color: rgb(90, 90, 90);
+    color: rgb(31, 31, 31);
 }
 
 .hospital-name {
