--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -247,7 +247,7 @@ h1 {
     /* box-shadow: 2px 2px 2px rgb(184, 184, 184); */
     z-index: 99998;
     position: fixed;
-    top: 11%;
+    top: 9%;
     left: 1%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -360,56 +360,39 @@ h1 {
     /* animation: fadeIn 0.3s ease; */
 }
 
+
 .graph-rectangle{
     margin-top: 35%;
     width: 92%;
-    height: 45%;
+    height: 33%;
     background-color: white;
     border-radius: 3px;
 }
 
 .closest-hospitals{
-    width: 92%;
-    height: 17%;
-    border-radius: 3px;
-    margin-top: 31%;
-    margin-bottom: -25%;
-    border-radius: 3px;
-}
-
-.closest-hospital-list{
-    font-family: "Arial";
-    font-size: 12pt;
-    font-weight: normal;
-    /* background-color: white; */
-}
-
-.graph-rectangle{
-    margin-top: 35%;
-    width: 92%;
-    height: 35%;
-    background-color: white;
-    border-radius: 3px;
-}
-
-.closest-hospitals{
-    width: 92%;
+    width: 100%;
     height: 17%;
     border-radius: 3px;
     margin-top: 31%;
     margin-bottom: -23%;
-    border-radius: 3px;
+}
+
+.closest-hospital-title{
+    font-size: 14pt;
+    color: white;
+    font-weight: bold;
+    margin-left: 5%;
+    margin-bottom: -2%;
 }
 
 .closest-hospital-list{
-    font-family: "Arial";
-    font-size: 12pt;
+    font-size: 15pt;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
 }
 
 .closest-hospital-list > p {
-    font-size: 12pt;
+    font-size: 15pt;
     margin-bottom: 1%;
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -417,8 +400,8 @@ h1 {
 
 .closest-hospital-list > li {
     list-style-type: none;
-    font-size: 9pt;
-    font-weight: bold;
+    font-size: 12pt;
+    font-weight: 600;
     background-color: white;
     color: #1D809E;
     border: 1px solid #F9C52F;
