--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -76,13 +76,19 @@ code {
 .info-box {
     cursor: default;
     width: 60em;
-    height: 40em;
+    height: 41em;
     position: absolute;
     border: 1px solid gray;
     border-radius: 3px;
     background-color: rgba(249,197,47, 0.9);
     z-index: 9999;
     box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+}
+
+.info-box > hr {
+    margin-top: -8px;
+    width: 88%;
+    border-top: 2px solid #1D809E;
 }
 
 .close-info-box {
@@ -110,12 +116,17 @@ code {
 }
 
 .hospital-detail {
-    color: rgba(0, 0, 0, 0.8);
+    /* color: rgba(0, 0, 0, 0.8); */
     font-size: 14pt;
-    font-weight: 500;
+    font-weight: 400;
     padding-left: 40px;
     padding-right: 40px;
     text-align: left;
+}
+
+.hospital-detail > p > .detail-value {
+    display: inline;
+    font-weight: 600;
 }
 
 .menu-bar {
@@ -374,7 +385,7 @@ h1 {
     height: 17%;
     border-radius: 3px;
     margin-top: 31%;
-    margin-bottom: -23%;
+    margin-bottom: -20%;
 }
 
 .closest-hospital-title{
