--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -71,8 +71,6 @@ code {
     width: 22px;
 }
 
-
-
 .info-box {
     cursor: default;
     width: 60em;
@@ -600,7 +598,28 @@ input:checked + .slider:before {
     font-size: 14px;
 }
 
+.quiz-modal {
+    display: flex;
+    position: absolute;
+    padding-top: 80px;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2000000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
+.quiz-modal > .quiz-body {
+    text-align: center;
+    height: 70%;
+    background-color: white;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
 /* End of class styles */
 /* Only add custom animations/transitions after this */
 
