--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -598,6 +598,25 @@ input:checked + .slider:before {
     font-size: 14px;
 }
 
+.contribute-button{
+    cursor: default;
+    /*background-color: rgba(0, 0, 0, 0.09);*/
+    z-index: 999999;
+    position: fixed;
+    top: 2%;
+    right: 1.5%;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    opacity: 1;
+}
+
+.contribute-button > button{
+    background-color: #F9C52F;
+    color: black;
+}
+
+.contribute-button:hover{
+    opacity: 1;
+}
 .quiz-modal {
     display: flex;
     position: absolute;
