--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -587,46 +587,60 @@ input:checked + .slider:before {
     width: 16px;
 }
 
-.contribute-form{
-    display: flex;
-    position: absolute;
-    padding-top: 80px;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.5);
-    z-index: 2000000;
-    top: 10%;
-    left: 40%;
-    right: 30%;
+.contribute-modal > .contribute-form {
+    background-color: rgb(255, 255, 255);
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
     height: 60%;;
 }
 
 .contribute-button{
     cursor: default;
-    /*background-color: rgba(0, 0, 0, 0.09);*/
     z-index: 999999;
     position: fixed;
     top: 2%;
     right: 1.5%;
-    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
+    /* box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75); */
+    opacity: 1;
+    display: inline-block;
+}
+
+.contribute-button > p:hover {
+    border-radius: 100px;
+    cursor: pointer;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);    
     opacity: 1;
 }
 
-.contribute-button > button{
-    background-color: #F9C52F;
-    color: black;
+.contribute-button .tooltiptext {
+    visibility: hidden;
+    right: 105%;
+    top: 15%;
+    width: 120px;
+    font-size: 10pt;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+  
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
 }
-
-.contribute-button:hover{
-    opacity: 1;
+  
+.contribute-button:hover .tooltiptext {
+    visibility: visible;
 }
 
 .bed-icon{
+    border-radius: 100px;
     height: 50px;
     width: 50px;
 }
 
-.quiz-modal {
+.quiz-modal, .contribute-modal {
     display: flex;
     position: absolute;
     padding-top: 80px;
