--- a/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
+++ b/PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
@@ -588,11 +588,13 @@ input:checked + .slider:before {
 }
 
 .contribute-modal > .contribute-form {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.7);
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 60%;;
+    width: 37%;
+    height: 80%;
+    border-radius: 3px;
+    box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75);
 }
 
 .contribute-button{
@@ -604,6 +606,84 @@ input:checked + .slider:before {
     /* box-shadow: 0px 2px 7px -1px rgba(0,0,0,0.75); */
     opacity: 1;
     display: inline-block;
+}
+
+.contribute-title{
+    font-size: 25px;
+    color: #cffaff;
+    text-align: center;
+    margin-top: 2%;
+    margin-bottom: 6%;
+    font-weight: 600;
+}
+
+.hospital-form-name > p {
+    display:inline-block;
+    color: white;
+    font-weight: 600;
+    margin-right: 2%;
+    margin-left: 10%;
+    font-size: 14pt;
+}
+
+
+.hospital-form-name {
+    z-index: 999999;
+}
+
+
+.hospital-form-name > input, .hospital-form-beds > input{
+    /*display:inline-block;*/
+    /*color: white;*/
+    width: 50%;
+    height: 35px;
+}
+
+
+
+
+
+.hospital-form-beds > p{
+    display:inline-block;
+    color: white;
+    font-weight: 600;
+    margin-right: 2%;
+    margin-left: 10%;
+    font-size: 14pt;
+    margin-top: 5%;
+    margin-right: 8%;
+}
+
+.submit-hospital{
+    text-align: center;
+    background-color: #F9C52F;
+    width: 18%;
+    height:40px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+
+}
+
+.submit-hospital > input{
+    width: 100%;
+    height:100%;
+    background-color: green;
+    color: white;
+    border: 2px solid green;
+    border-radius: 3px;
+}
+
+.submit-hospital > input:hover{
+    width: 100%;
+    height:100%;
+    background-color: white;
+    color: green;
+    border: 2px solid green;
+    border-radius: 3px;
 }
 
 .contribute-button > p:hover {
